src/objects/UC_Role__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_date__c</fullName>
        <label>Accepted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>User_Company</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>User_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GN_User__c</fullName>
        <label>User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>UC_Role</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invited_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invited by</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>UC_Role1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invited_date__c</fullName>
        <label>Invited date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RoleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RoleId</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipName>UC_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>Is Person Account</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BLN UC_Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UC-{00000000}</displayFormat>
        <label>UC_Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN UC_Role</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>